# SSMToolPy

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: current_status.md  differentiability.md  migration_inventory.md  migration_plan.md  migration_report.md
examples/: benchmark_ssm_1st_order.py  planar_system.py
examples/benchmark_ssm_1st_order/: README.md  benchmark.py  benchmark_ssm_1st_order.ipynb  example.py
examples/lorenz_1st_order/: README.md  example.py  lorenz.py  lorenz_1st_order.ipynb
examples/planar_system/: README.md  example.py  planar.py  planar_system.ipynb
notebooks/: benchmark_ssm_1st_order.ipynb
src/ssmtoolpy/: __init__.py  coefficients.py  dynamical_system.py  examples.py  frc.py  io.py  manifold.py  misc.py  multi_index.py  options.py  reduction.py  ssm.py  tensor.py
src/ssmtoolpy/core/: __init__.py  graph.py  integrators.py  invariance.py  multiindex.py  polynomial.py  trajectories.py
src/ssmtoolpy/systems/: __init__.py  lorenz.py  planar.py
tests/: test_benchmark_ssm_1st_order.py  test_coefficients.py  test_core_graph.py  test_core_graph_solver.py  test_core_integrators.py  test_dynamical_system.py  test_examples.py  test_frc.py  test_io.py  test_lorenz_1st_order.py  test_manifold.py  test_misc.py  test_multi_index.py  test_options.py  test_parameter_to_loss.py  test_planar_system.py  test_ssm.py  test_tensor_frc_reduction.py
tests/matlab_reference/: README.md  low_level_reference.json
